feat: add topic selection page with dashboard redirection